fix: Chip List still has contrast issues in Dialog

--- a/src/scss/components/Dialog.scss
+++ b/src/scss/components/Dialog.scss
@@ -73,8 +73,12 @@
   overflow: auto;
 
   .chip.selected {
-    background-color: var(--secondary);
+    @extend .secondary;
     border-color: var(--secondary);
+
+    .chip__icon {
+      color: inherit;
+    }
   }
 
   .btn-chip {
